--- a/src/BaroquenMelody.App.Components/Shared/CompositionRuleConfigurationPanel.razor
+++ b/src/BaroquenMelody.App.Components/Shared/CompositionRuleConfigurationPanel.razor
@@ -2,7 +2,7 @@
     <MudExpansionPanel Text="Composition Rules">
         @foreach (var compositionRule in CompositionRuleConfigurationService.ConfigurableCompositionRules)
         {
-            <CompositionRuleConfigurationCard CompositionRule="@compositionRule"/>
+            <CompositionRuleConfigurationCard CompositionRule="compositionRule"/>
         }
     </MudExpansionPanel>
 </MudExpansionPanels>
