--- a/src/BaroquenMelody.App.Components/Shared/OrnamentationConfigurationPanel.razor
+++ b/src/BaroquenMelody.App.Components/Shared/OrnamentationConfigurationPanel.razor
@@ -2,7 +2,7 @@
     <MudExpansionPanel Text="Composition Ornamentations">
         @foreach (var ornamentation in OrnamentationConfigurationService.ConfigurableOrnamentations)
         {
-            <OrnamentationConfigurationCard OrnamentationType="@ornamentation"/>
+            <OrnamentationConfigurationCard OrnamentationType="ornamentation"/>
         }
     </MudExpansionPanel>
 </MudExpansionPanels>
