--- a/src/BaroquenMelody.App.Components/Shared/CompositionConfigurationPanel.razor
+++ b/src/BaroquenMelody.App.Components/Shared/CompositionConfigurationPanel.razor
@@ -1,5 +1,5 @@
-﻿<MudExpansionPanels>
-    <MudExpansionPanel Text="General Configuration">
-        <CompositionConfigurationCard/>
-    </MudExpansionPanel>
-</MudExpansionPanels>
+﻿<RandomizeResetButtonGroup/>
+<CompositionConfigurationCard/>
+<MudScrollToTop>
+    <MudFab Color="Color.Tertiary" StartIcon="@Icons.Material.Filled.KeyboardArrowUp" />
+</MudScrollToTop>
