--- a/src/BaroquenMelody.App.Components/Shared/CompositionRuleConfigurationCard.razor
+++ b/src/BaroquenMelody.App.Components/Shared/CompositionRuleConfigurationCard.razor
@@ -1,6 +1,6 @@
 ﻿@inherits Fluxor.Blazor.Web.Components.FluxorComponent
 
-<MudCard Elevation="3" Class="my-2">
+<MudCard Class="rounded mb-3 mx-3" Elevation="3" Outlined="true">
     <MudCardHeader>
         <CardHeaderContent>
             <MudText>@CompositionRule</MudText>
