--- a/src/BaroquenMelody.App.Components/Shared/OrnamentationConfigurationPanel.razor
+++ b/src/BaroquenMelody.App.Components/Shared/OrnamentationConfigurationPanel.razor
@@ -1,8 +1,8 @@
-﻿<MudExpansionPanels>
-    <MudExpansionPanel Text="Composition Ornamentations">
-        @foreach (var ornamentation in OrnamentationConfigurationService.ConfigurableOrnamentations)
-        {
-            <OrnamentationConfigurationCard OrnamentationType="ornamentation"/>
-        }
-    </MudExpansionPanel>
-</MudExpansionPanels>
+﻿<RandomizeResetButtonGroup />
+@foreach (var ornamentation in OrnamentationConfigurationService.ConfigurableOrnamentations)
+{
+    <OrnamentationConfigurationCard OrnamentationType="ornamentation"/>
+}
+<MudScrollToTop>
+    <MudFab Color="Color.Tertiary" StartIcon="@Icons.Material.Filled.KeyboardArrowUp" />
+</MudScrollToTop>
