--- a/src/BaroquenMelody.App.Components/Layout/MainLayout.razor
+++ b/src/BaroquenMelody.App.Components/Layout/MainLayout.razor
@@ -14,7 +14,7 @@
         <MudTooltip  Delay="@ThemeProvider.TooltipDelay" Duration="@ThemeProvider.TooltipDuration" Text="source code">
             <MudIconButton Icon="@Icons.Custom.Brands.GitHub" Color="Color.Inherit" Href="https://www.github.com/wbaldoumas/baroquen-melody"/>    
         </MudTooltip>
-        <MudTooltip Delay="@ThemeProvider.TooltipDelay" Duration="@ThemeProvider.TooltipDuration" Text="@ThemeProvider.DarkLightTooltipText">
+        <MudTooltip Delay="@ThemeProvider.TooltipDelay" Duration="@ThemeProvider.TooltipDuration" Text="@ThemeProvider.DarkLightModeTooltipText">
             <MudIconButton Icon="@(ThemeProvider.DarkLightModeButtonIcon)" Color="@(ThemeProvider.DarkLightModeIconColor)" OnClick="@ThemeProvider.ToggleDarkMode"/>
         </MudTooltip>
         <MudTooltip Delay="@ThemeProvider.TooltipDelay" Duration="@ThemeProvider.TooltipDuration" Text="more options" Placement="Placement.Left">
