--- a/src/BaroquenMelody.App.Components/Layout/MainLayout.razor
+++ b/src/BaroquenMelody.App.Components/Layout/MainLayout.razor
@@ -8,11 +8,40 @@
 <MudSnackbarProvider/>
 
 <MudLayout>
-    <MudAppBar Elevation="1" Dense="false" Gutters="false">
+    <MudAppBar Elevation="3" Dense="true" Gutters="false">
+        <MudIconButton Class="ml-3" Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@((e) => DrawerToggle())"/>
         <MudSpacer/>
-        <MudIconButton Icon="@(ThemeProvider.DarkLightModeButtonIcon)" Color="Color.Inherit" OnClick="@ThemeProvider.ToggleDarkMode" Class="mr-3" />
+        <MudTooltip  Delay="@ThemeProvider.TooltipDelay" Duration="@ThemeProvider.TooltipDuration" Text="source code">
+            <MudIconButton Icon="@Icons.Custom.Brands.GitHub" Color="Color.Inherit" Href="https://www.github.com/wbaldoumas/baroquen-melody"/>    
+        </MudTooltip>
+        <MudTooltip Delay="@ThemeProvider.TooltipDelay" Duration="@ThemeProvider.TooltipDuration" Text="@ThemeProvider.DarkLightModeTooltipText">
+            <MudIconButton Icon="@(ThemeProvider.DarkLightModeButtonIcon)" Color="@(ThemeProvider.DarkLightModeIconColor)" OnClick="@ThemeProvider.ToggleDarkMode"/>
+        </MudTooltip>
+        <MudTooltip Delay="@ThemeProvider.TooltipDelay" Duration="@ThemeProvider.TooltipDuration" Text="more options" Placement="Placement.Left">
+            <MudMenu Icon="@Icons.Material.Filled.MoreVert"
+                     Class="mr-3"
+                     AriaLabel="more options">
+                <MudMenuItem Icon="@Icons.Material.Filled.Lightbulb" IconColor="Color.Warning" Href="https://github.com/wbaldoumas/baroquen-melody/issues/new?assignees=&labels=&projects=&template=FEATURE_REQUEST.md&title=">Feature request</MudMenuItem>
+                <MudMenuItem Icon="@Icons.Material.Outlined.BugReport" IconColor="Color.Tertiary" Href="https://github.com/wbaldoumas/baroquen-melody/issues/new?assignees=&labels=&projects=&template=BUG_REPORT.md&title=">Report a bug</MudMenuItem>
+                <MudMenuItem Icon="@Icons.Material.Outlined.Shield" IconColor="Color.Info" Href="https://github.com/wbaldoumas/baroquen-melody/security/policy">Report a vulnerability</MudMenuItem>
+                <MudMenuItem Icon="@Icons.Material.Filled.Favorite" IconColor="Color.Secondary">Donate</MudMenuItem>
+            </MudMenu>
+        </MudTooltip>
     </MudAppBar>
+    <MudDrawer @bind-Open="_isDrawerOpen" ClipMode="DrawerClipMode.Never" Variant="DrawerVariant.Temporary" Overlay="true" Elevation="3">
+        <MudDrawerHeader Dense="true">
+            <MudText Color="Color.Tertiary" Typo="Typo.h6">Baroquen Melody</MudText>
+        </MudDrawerHeader>
+        <NavMenu/>
+    </MudDrawer>
     <MudMainContent Class="mt-3 mx-5">
         @Body
     </MudMainContent>
 </MudLayout>
+
+@code
+{
+    private bool _isDrawerOpen;
+
+    private void DrawerToggle() => _isDrawerOpen = !_isDrawerOpen;
+}
