--- a/src/BaroquenMelody.App.Components/Pages/Home.razor
+++ b/src/BaroquenMelody.App.Components/Pages/Home.razor
@@ -57,7 +57,7 @@
             PhrasingConfiguration.Default,
             CompositionRuleConfigurationState.Value.Aggregate,
             OrnamentationConfigurationState.Value.Aggregate,
-            BaroquenScale.Parse($"{CompositionConfigurationState.Value.RootNote.ToString()} {CompositionConfigurationState.Value.Mode.ToString()}"),
+            CompositionConfigurationState.Value.Scale,
             CompositionConfigurationState.Value.Meter,
             CompositionConfigurationState.Value.Meter.DefaultMusicalTimeSpan(),
             CompositionConfigurationState.Value.CompositionLength
