--- a/src/BaroquenMelody.App.Components/Shared/CompositionConfigurationPanel.razor
+++ b/src/BaroquenMelody.App.Components/Shared/CompositionConfigurationPanel.razor
@@ -1,5 +1,4 @@
-﻿<RandomizeResetButtonGroup/>
+﻿<RandomizeResetButtonGroup OnRandomizeClick="CompositionConfigurationService.Randomize"
+                           OnResetClick="CompositionConfigurationService.Reset"/>
 <CompositionConfigurationCard/>
-<MudScrollToTop>
-    <MudFab Color="Color.Tertiary" StartIcon="@Icons.Material.Filled.KeyboardArrowUp" />
-</MudScrollToTop>
+<ScrollToTop/>
