--- a/src/BaroquenMelody.App.Components/Shared/OrnamentationConfigurationPanel.razor
+++ b/src/BaroquenMelody.App.Components/Shared/OrnamentationConfigurationPanel.razor
@@ -3,6 +3,4 @@
 {
     <OrnamentationConfigurationCard OrnamentationType="ornamentation"/>
 }
-<MudScrollToTop>
-    <MudFab Color="Color.Tertiary" StartIcon="@Icons.Material.Filled.KeyboardArrowUp" />
-</MudScrollToTop>
+<ScrollToTop />
