--- a/src/BaroquenMelody.App.Components/_Imports.razor
+++ b/src/BaroquenMelody.App.Components/_Imports.razor
@@ -13,6 +13,7 @@
 @using BaroquenMelody.Library.Compositions.Ornamentation.Enums
 @using BaroquenMelody.Library.Compositions.Rules
 @using BaroquenMelody.Library.Compositions.Rules.Enums
+@using BaroquenMelody.Library.Infrastructure.Extensions
 @using BaroquenMelody.Library.Store.Actions
 @using BaroquenMelody.Library.Store.State
 @using Fluxor
