--- a/src/BaroquenMelody.App.Components/Shared/InstrumentConfigurationPanel.razor
+++ b/src/BaroquenMelody.App.Components/Shared/InstrumentConfigurationPanel.razor
@@ -3,6 +3,4 @@
 {
     <InstrumentConfigurationCard Instrument="instrument"/>
 }
-<MudScrollToTop>
-    <MudFab Color="Color.Tertiary" StartIcon="@Icons.Material.Filled.KeyboardArrowUp" />
-</MudScrollToTop>
+<ScrollToTop />
