--- a/src/BaroquenMelody.App.Components/Layout/MainLayout.razor
+++ b/src/BaroquenMelody.App.Components/Layout/MainLayout.razor
@@ -9,7 +9,7 @@
 
 <MudLayout>
     <MudAppBar Elevation="3" Dense="true" Gutters="false">
-        <MudIconButton Class="ml-3" Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@((e) => DrawerToggle())"/>
+        <MudIconButton Class="ml-3" Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@(_ => ToggleDrawer())"/>
         <MudSpacer/>
         <MudTooltip  Delay="@ThemeProvider.TooltipDelay" Duration="@ThemeProvider.TooltipDuration" Text="source code">
             <MudIconButton Icon="@Icons.Custom.Brands.GitHub" Color="Color.Inherit" Href="https://www.github.com/wbaldoumas/baroquen-melody"/>    
@@ -21,8 +21,8 @@
             <MudMenu Icon="@Icons.Material.Filled.MoreVert"
                      Class="mr-3"
                      AriaLabel="more options">
-                <MudMenuItem Icon="@Icons.Material.Filled.Lightbulb" IconColor="Color.Warning" Href="https://github.com/wbaldoumas/baroquen-melody/issues/new?assignees=&labels=&projects=&template=FEATURE_REQUEST.md&title=">Feature request</MudMenuItem>
-                <MudMenuItem Icon="@Icons.Material.Outlined.BugReport" IconColor="Color.Tertiary" Href="https://github.com/wbaldoumas/baroquen-melody/issues/new?assignees=&labels=&projects=&template=BUG_REPORT.md&title=">Report a bug</MudMenuItem>
+                <MudMenuItem Icon="@Icons.Material.Filled.Lightbulb" IconColor="Color.Warning" Href="https://github.com/wbaldoumas/baroquen-melody/issues/new?template=FEATURE_REQUEST.md">Feature request</MudMenuItem>
+                <MudMenuItem Icon="@Icons.Material.Outlined.BugReport" IconColor="Color.Tertiary" Href="https://github.com/wbaldoumas/baroquen-melody/issues/new?template=BUG_REPORT.md">Report a bug</MudMenuItem>
                 <MudMenuItem Icon="@Icons.Material.Outlined.Shield" IconColor="Color.Info" Href="https://github.com/wbaldoumas/baroquen-melody/security/policy">Report a vulnerability</MudMenuItem>
                 <MudMenuItem Icon="@Icons.Material.Filled.Favorite" IconColor="Color.Secondary">Donate</MudMenuItem>
             </MudMenu>
@@ -43,5 +43,5 @@
 {
     private bool _isDrawerOpen;
 
-    private void DrawerToggle() => _isDrawerOpen = !_isDrawerOpen;
+    private void ToggleDrawer() => _isDrawerOpen = !_isDrawerOpen;
 }
