--- a/src/BaroquenMelody.App.Components/Shared/InstrumentConfigurationPanel.razor
+++ b/src/BaroquenMelody.App.Components/Shared/InstrumentConfigurationPanel.razor
@@ -1,6 +1,7 @@
-﻿<RandomizeResetButtonGroup />
+﻿<RandomizeResetButtonGroup OnRandomizeClick="InstrumentConfigurationService.Randomize"
+                           OnResetClick="InstrumentConfigurationService.ConfigureDefaults"/>
 @foreach (var instrument in InstrumentConfigurationService.ConfigurableInstruments)
 {
     <InstrumentConfigurationCard Instrument="instrument"/>
 }
-<ScrollToTop />
+<ScrollToTop/>
