--- a/src/BaroquenMelody.App.Components/Shared/CompositionRuleConfigurationPanel.razor
+++ b/src/BaroquenMelody.App.Components/Shared/CompositionRuleConfigurationPanel.razor
@@ -1,6 +1,11 @@
-﻿<RandomizeResetButtonGroup />
-@foreach (var compositionRule in CompositionRuleConfigurationService.ConfigurableCompositionRules)
-{
-    <CompositionRuleConfigurationCard CompositionRule="compositionRule"/>
-}
+﻿<RandomizeResetButtonGroup OnRandomizeClick="CompositionRuleConfigurationService.Randomize"
+                           OnResetClick="CompositionRuleConfigurationService.ConfigureDefaults"/>
+<MudGrid Spacing="1" Justify="Justify.Center">
+    @foreach (var compositionRule in CompositionRuleConfigurationService.ConfigurableCompositionRules)
+    {
+        <MudItem xs="12" sm="12" md="6" lg="6" xl="6" xxl="6">
+            <CompositionRuleConfigurationCard CompositionRule="compositionRule"/>
+        </MudItem>
+    }
+</MudGrid>
 <ScrollToTop />
